--- a/teams.html
+++ b/teams.html
@@ -31,88 +31,151 @@
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
-						<header class="major">
-							<h2>Left Sidebar</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
-						</header>
-						<div class="row gtr-150">
-							<div class="col-4 col-12-medium">
-
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-									</section>
-
-							</div>
-							<div class="col-8 col-12-medium imp-medium">
-
-								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
-									</section>
-
+						 <!-- CSKO -->
+						<section class="player-gallery">
+						<div class="player-card">
+							<img src="images/hráč01.png" alt="Jindřich Chyba">
+							<div class="overlay">
+							<h3>Jindřich Chyba</h3>
+							<p>ZEDKO</p>
 							</div>
 						</div>
+						<div class="player-card">
+							<img src="images/hráč02.png" alt="Sebastian Daňo">
+							<div class="overlay">
+							<h3>Sebastian Daňo</h3>
+							<p>beastik</p>
+							</div>
+						</div>
+						<div class="player-card">
+							<img src="images/hráč03.png" alt="Lukáš Šebek">
+							<div class="overlay">
+							<h3>Lukáš Šebek</h3>
+							<p>luky</p>
+						</div>
+						</div>
+						<div class="player-card">
+							<img src="images/hráč04.png" alt="Lukáš Šebek">
+							<div class="overlay">
+							<h3>Lukáš Šebek</h3>
+							<p>luky</p>
+						</div>
+						</div>
+						<div class="player-card">
+							<img src="images/unknown.png" alt="Lukáš Šebek">
+							<div class="overlay">
+							<h3>Lukáš Šebek</h3>
+							<p>luky</p>
+						</div>
+						</div>
+						</section>
+							<div class="game-csko">
+							<img src="images/cs2.png" alt="Game Logo">
+							</div>
+						<br>
+						<br>
+						<br>
+
+
+						<!-- LOLKO -->
+						<section class="player-gallery">
+						<div class="player-card">
+							<img src="images/hráč01.png" alt="Jindřich Chyba">
+							<div class="overlay">
+							<h3>Jindřich Chyba</h3>
+							<p>ZEDKO</p>
+							</div>
+						</div>
+						<div class="player-card">
+							<img src="images/hráč02.png" alt="Sebastian Daňo">
+							<div class="overlay">
+							<h3>Sebastian Daňo</h3>
+							<p>beastik</p>
+							</div>
+						</div>
+						<div class="player-card">
+							<img src="images/hráč03.png" alt="Lukáš Šebek">
+							<div class="overlay">
+							<h3>Lukáš Šebek</h3>
+							<p>luky</p>
+						</div>
+						</div>
+						<div class="player-card">
+							<img src="images/hráč04.png" alt="Lukáš Šebek">
+							<div class="overlay">
+							<h3>Lukáš Šebek</h3>
+							<p>luky</p>
+						</div>
+						</div>
+						<div class="player-card">
+							<img src="images/unknown.png" alt="Lukáš Šebek">
+							<div class="overlay">
+							<h3>Lukáš Šebek</h3>
+							<p>luky</p>
+						</div>
+						</div>
+						</section>
+
 					</div>
+					<div class="game-lolko">
+						<img src="images/lolko.png" alt="Game Logo">
+					</div>
+					<br>
+					<br>
+					<br>
+						<!-- ROCKET LEAGUE -->
+						 <div class="container">
+						<section class="player-gallery">
+						<div class="player-card">
+							<img src="images/hráč01.png" alt="Jindřich Chyba">
+							<div class="overlay">
+							<h3>Jindřich Chyba</h3>
+							<p>ZEDKO</p>
+							</div>
+						</div>
+						<div class="player-card">
+							<img src="images/hráč02.png" alt="Sebastian Daňo">
+							<div class="overlay">
+							<h3>Sebastian Daňo</h3>
+							<p>beastik</p>
+							</div>
+						</div>
+						<div class="player-card">
+							<img src="images/hráč03.png" alt="Lukáš Šebek">
+							<div class="overlay">
+							<h3>Lukáš Šebek</h3>
+							<p>luky</p>
+						</div>
+						</div>
+						</div>
+						</div>
+						</section>
+
+					</div>
+					<div class="game-rocket">
+						<img src="images/rocket.png" alt="Game Logo">
+					</div>
+					</div>
+					<br>
+					<br>
+					<br>
+
 				</div>
 
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span class="label">Discord</span></a></li>
+						<li><a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
 		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
