--- a/wins.html
+++ b/wins.html
@@ -34,7 +34,7 @@
 						<h2>2025</h2>
 						<div class="achievement-grid">
 							<div class="achievement-card">
-								<img src="images/cs2 stock.jpg" alt="eChampions League 2025">
+								<img src="images/cs2 stock.jpg" alt="SAVŠ x Smarty.cz Turnaj">
 								<div class="tags">
 									<span class="tag gold">1. místo</span>
 									<span class="tag">ONLINE</span>
@@ -45,7 +45,7 @@
 							</div>
 						
 							<div class="achievement-card">
-								<img src="images/3E.jpg" alt="ESL Challenger League Season 49">
+								<img src="images/3E.jpg" alt="3E Akademické mistrovství">
 								<div class="tags">
 									<span class="tag bronze">3RD PLACE</span>
 									<span class="tag">ONLINE</span>
@@ -54,6 +54,27 @@
 								<h3>3E Akademické mistrovství</h3>
 								<p class="achievement-desc">Týmy z celé České republiky složené ze studentů bojují za jméno své univerzity v
 									klání o prestižní titul vítězů 3Eligy, ale také o hodnotné ceny.</p>
+							</div>
+							<div class="achievement-card">
+								<img src="images/3E.jpg" alt="3E Akademické mistrovství">
+								<div class="tags">
+									<span class="tag green">ČTVRTFINALISTÉ</span>
+									<span class="tag">ONLINE</span>
+									<span class="tag purple">LoL</span>
+								</div>
+								<h3>3E Akademické mistrovství</h3>
+								<p class="achievement-desc">Týmy z celé České republiky složené ze studentů bojují za jméno své univerzity v
+									klání o prestižní titul vítězů 3Eligy, ale také o hodnotné ceny.</p>
+							</div>
+							<div class="achievement-card">
+								<img src="images/derby25.jpg" alt="3E Akademické mistrovství">
+								<div class="tags">
+									<span class="tag gold">VÍTĚZSTVÍ</span>
+									<span class="tag">LAN</span>
+									<!--<span class="tag purple">LoL</span>-->
+								</div>
+								<h3>Derby s UHK</h3>
+								<p class="achievement-desc">Každoroční derby se sousední Univerzitou Hradec Králové ve všech třech reprezentačních titulech. Lokace dění se střídá každý rok, v 2026 se na nás můžete přijít podívat do Auly Arnošta z Pardubic.</p>
 							</div>
 						
 							<!-- Add more cards -->
