Refactor website structure and content for UPCE Esports
- Removed outdated backup_teams.html, teams.html, and wins.html files.
- Updated index.html to reflect new branding as "UPCE Esports" and adjusted navigation links.
- Created new teams.html and wins.html pages with updated content and structure.
- Added CSS styles for teams and wins pages to enhance layout and design.
- Implemented player gallery and achievement sections with responsive design.
- Ensured all images and links are correctly referenced for the new structure.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header">
-        <h1 id="logo"><a href="index.html">Landed</a></h1>
+        <h1 id="logo"><a href="index.html">UPCE Esports</a></h1>
         <nav id="nav">
           <ul>
             <li><a href="index.html">Hlavní stránka</a></li>
-            <li><a href="teams.html">Týmy</a></li>
-            <li><a href="wins.html">Úspěchy</a></li>
+            <li><a href="pages/teams/teams.html">Týmy</a></li>
+            <li><a href="pages/wins/wins.html">Úspěchy</a></li>
             <li>
               <a
                 href="https://discord.gg/NmzvWFH"
@@ -44,10 +44,10 @@
       <section id="banner">
         <div class="content">
           <header>
-            <h2>The future has landed</h2>
+            <h2>Vítejte ve světě UPCE Esports</h2>
             <p>
-              And there are no hoverboards or flying cars.<br />
-              Just apps. Lots of mother flipping apps.
+              Spojujeme hráče. Budujeme týmy. Soutěžíme naplno.<br />
+              Přidej se a buď součástí univerzitní herní revoluce.
             </p>
           </header>
           <span class="image"><img src="images/kůň.png" alt="" /></span>
