--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -9,60 +9,60 @@
 		<title>Left Sidebar - Landed by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/rollaz.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../../assets/css/main.css"/>
+		<link rel="stylesheet" href="./teams.css"/>
+		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Hlavní stránka</a></li>
-							<li><a href="teams.html">Týmy</a></li>
-							<li><a href="wins.html">Úspěchy</a></li>
-							<li><a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a></li>
-						</ul>
-					</nav>
-				</header>
-
+			<header id="header">
+			<h1 id="logo"><a href="../../index.html">UPCE Esports</a></h1>
+			<nav id="nav">
+				<ul>
+				<li><a href="../../index.html">Hlavní stránka</a></li>
+				<li><a href="../teams/teams.html">Týmy</a></li>
+				<li><a href="../wins/wins.html">Úspěchy</a></li>
+				<li><a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a></li>
+				</ul>
+			</nav>
+			</header>
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						 <!-- CSKO -->
 						<section class="player-gallery">
 						<div class="player-card">
-							<img src="images/hráč01.png" alt="Jindřich Chyba">
+							<img src="../../images/hráč01.png" alt="Jindřich Chyba">
 							<div class="overlay">
 							<h3>Jindřich Chyba</h3>
 							<p>ZEDKO</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč02.png" alt="Sebastian Daňo">
+							<img src="../../images/hráč02.png" alt="Sebastian Daňo">
 							<div class="overlay">
 							<h3>Sebastian Daňo</h3>
 							<p>beastik</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč03.png" alt="Lukáš Šebek">
+							<img src="../../images/hráč03.png" alt="Lukáš Šebek">
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč04.png" alt="Lukáš Šebek">
+							<img src="../../images/hráč04.png" alt="Lukáš Šebek">
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="images/unknown.png" alt="Lukáš Šebek">
+							<img src="../../images/unknown.png" alt="Lukáš Šebek">
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
@@ -70,7 +70,7 @@
 						</div>
 						</section>
 							<div class="game-csko">
-							<img src="images/cs2.png" alt="Game Logo">
+							<img src="../../images/cs2.png" alt="Game Logo">
 							</div>
 						<br>
 						<br>
@@ -80,35 +80,35 @@
 						<!-- LOLKO -->
 						<section class="player-gallery">
 						<div class="player-card">
-							<img src="images/hráč01.png" alt="Jindřich Chyba">
+							<img src="../../images/hráč01.png" alt="Jindřich Chyba">
 							<div class="overlay">
 							<h3>Jindřich Chyba</h3>
 							<p>ZEDKO</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč02.png" alt="Sebastian Daňo">
+							<img src="../../images/hráč02.png" alt="Sebastian Daňo">
 							<div class="overlay">
 							<h3>Sebastian Daňo</h3>
 							<p>beastik</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč03.png" alt="Lukáš Šebek">
+							<img src="../../images/hráč03.png" alt="Lukáš Šebek">
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč04.png" alt="Lukáš Šebek">
+							<img src="../../images/hráč04.png" alt="Lukáš Šebek">
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
 						</div>
 						</div>
 						<div class="player-card">
-							<img src="images/unknown.png" alt="Lukáš Šebek">
+							<img src="../../images/unknown.png" alt="Lukáš Šebek">
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
@@ -118,7 +118,7 @@
 
 					</div>
 					<div class="game-lolko">
-						<img src="images/lolko.png" alt="Game Logo">
+						<img src="../../images/lolko.png" alt="Game Logo">
 					</div>
 					<br>
 					<br>
@@ -127,21 +127,21 @@
 						 <div class="container">
 						<section class="player-gallery">
 						<div class="player-card">
-							<img src="images/hráč01.png" alt="Jindřich Chyba">
+							<img src="../../images/hráč01.png" alt="Jindřich Chyba">
 							<div class="overlay">
 							<h3>Jindřich Chyba</h3>
 							<p>ZEDKO</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč02.png" alt="Sebastian Daňo">
+							<img src="../../images/hráč02.png" alt="Sebastian Daňo">
 							<div class="overlay">
 							<h3>Sebastian Daňo</h3>
 							<p>beastik</p>
 							</div>
 						</div>
 						<div class="player-card">
-							<img src="images/hráč03.png" alt="Lukáš Šebek">
+							<img src="../../images/hráč03.png" alt="Lukáš Šebek">
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
@@ -153,7 +153,7 @@
 
 					</div>
 					<div class="game-rocket">
-						<img src="images/rocket.png" alt="Game Logo">
+						<img src="../../images/rocket.png" alt="Game Logo">
 					</div>
 					</div>
 					<br>
