Refactor wins.html: update stylesheet paths, enhance achievement cards, and remove outdated content

--- a/pages/wins/wins.html
+++ b/pages/wins/wins.html
@@ -13,9 +13,10 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="../../assets/css/main.css" />
-    <link rel="stylesheet" href="./wins.css" />
+    <link rel="stylesheet" href="../wins/wins.css" />
+
     <noscript
-      ><link rel="stylesheet" href="../../assets/css/noscript.css"
+      ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
   </head>
   <body class="is-preload">
@@ -39,7 +40,8 @@
           </ul>
         </nav>
       </header>
-      <!-- Main -->
+
+      <!-- Cards 2025 / First-card -->
       <div id="main" class="wrapper style1">
         <div class="achievement-section">
           <h2>2025</h2>
@@ -47,11 +49,12 @@
             <div class="achievement-card">
               <img
                 src="../../images/cs2 stock.jpg"
-                alt="eChampions League 2025"
+                alt="SAVŠ x Smarty.cz Turnaj"
               />
               <div class="tags">
                 <span class="tag gold">1. místo</span>
                 <span class="tag">ONLINE</span>
+                <span class="tag yellow">CS2</span>
               </div>
               <h3>SAVŠ x Smarty.cz Turnaj</h3>
               <p class="achievement-desc">
@@ -60,16 +63,59 @@
               </p>
             </div>
 
+            <!-- Cards 2025 / Second-card -->
+
             <div class="achievement-card">
-              <img
-                src="../../images/cs2 stock.jpg"
-                alt="ESL Challenger League Season 49"
-              />
+              <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
               <div class="tags">
                 <span class="tag bronze">3RD PLACE</span>
                 <span class="tag">ONLINE</span>
+                <span class="tag yellow">CS2</span>
               </div>
-              <h3>ESL Challenger League Season 49: Europe</h3>
+              <h3>3E Akademické mistrovství</h3>
+              <p class="achievement-desc">
+                Týmy z celé České republiky složené ze studentů bojují za jméno
+                své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
+                o hodnotné ceny.
+              </p>
+            </div>
+
+            <!-- Cards 2025 / Third-card -->
+
+            <div class="achievement-card">
+              <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
+              <div class="tags">
+                <span class="tag green">ČTVRTFINALISTÉ</span>
+                <span class="tag">ONLINE</span>
+                <span class="tag purple">LoL</span>
+              </div>
+              <h3>3E Akademické mistrovství</h3>
+              <p class="achievement-desc">
+                Týmy z celé České republiky složené ze studentů bojují za jméno
+                své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
+                o hodnotné ceny.
+              </p>
+            </div>
+
+            <!-- Cards 2025 / Fourth-card -->
+
+            <div class="achievement-card">
+              <img
+                src="../../images/derby25.jpg"
+                alt="3E Akademické mistrovství"
+              />
+              <div class="tags">
+                <span class="tag gold">VÍTĚZSTVÍ</span>
+                <span class="tag">LAN</span>
+                <!--<span class="tag purple">LoL</span>-->
+              </div>
+              <h3>Derby s UHK</h3>
+              <p class="achievement-desc">
+                Každoroční derby se sousední Univerzitou Hradec Králové ve všech
+                třech reprezentačních titulech. Lokace dění se střídá každý rok,
+                v 2026 se na nás můžete přijít podívat do Auly Arnošta z
+                Pardubic.
+              </p>
             </div>
 
             <!-- Add more cards -->
@@ -82,6 +128,7 @@
               <div class="tags">
                 <span class="tag bronze">ČTVRTFINALISTÉ</span>
                 <span class="tag">LAN</span>
+                <span class="tag yellow">CS2</span>
               </div>
               <h3>GSport 2024</h3>
               <p class="achievement-desc">
@@ -90,6 +137,23 @@
               </p>
             </div>
             <!-- Add more -->
+            <div class="achievement-card">
+              <img
+                src="../../images/3E.jpg"
+                alt="ESL Challenger League Season 49"
+              />
+              <div class="tags">
+                <span class="tag gold">1ST PLACE</span>
+                <span class="tag">ONLINE</span>
+                <span class="tag yellow">CS2</span>
+              </div>
+              <h3>3E Akademické mistrovství</h3>
+              <p class="achievement-desc">
+                Týmy z celé České republiky složené ze studentů bojují za jméno
+                své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
+                o hodnotné ceny.
+              </p>
+            </div>
           </div>
         </div>
       </div>
