--- a/index.html
+++ b/index.html
@@ -27,14 +27,9 @@
           <ul>
             <li><a href="index.html">Hlavní stránka</a></li>
             <li><a href="pages/teams/teams.html">Týmy</a></li>
-            <li><a href="pages/wins/wins.html">Úspěchy</a></li>
+            <li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
             <li>
-              <a
-                href="https://discord.gg/NmzvWFH"
-                class="button primary"
-                target="_blank"
-                >Připojte se k nám!</a
-              >
+              <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
             </li>
           </ul>
         </nav>
@@ -44,7 +39,7 @@
       <section id="banner">
         <div class="content">
           <header>
-            <h2>Vítejte ve světě UPCE Esports</h2>
+            <h2>Vítejte ve spolku UPCE Esports</h2>
             <p>
               Spojujeme hráče. Budujeme týmy. Soutěžíme naplno.<br />
               Přidej se a buď součástí univerzitní herní revoluce.
@@ -58,16 +53,17 @@
       <!-- One -->
       <section id="one" class="spotlight style1 bottom">
         <span class="image fit main"
-          ><img src="images/pic02.jpg" alt=""
+          ><img src="images/rektor01.jpg" alt=""
         /></span>
         <div class="content">
           <div class="container">
             <div class="row">
               <div class="col-4 col-12-medium">
                 <header>
-                  <h2>Odio faucibus ipsum integer consequat</h2>
+                  <h2>Nejsme jen pro profíky.</h2>
                   <p>
-                    Nascetur eu nibh vestibulum amet gravida nascetur praesent
+                    Do spolku zveme každého milovníka her,
+                    ať už od retro po nejnovější tituly.
                   </p>
                 </header>
               </div>
@@ -82,10 +78,9 @@
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Pravidelně pořádáme tréninky a týmové strategie pro zlepšení
-                  herních výkonů. Naše týmy se účastní univerzitních lig a
-                  národních šampionátů. Věříme v fair play a sportovního ducha,
-                  který nás spojuje napříč všemi herními disciplínami.
+                  Pravidelně pořádáme akce také i pro ostatní studenty,
+                  jako jsou například LAN párty, hospodské kvízy s herní tématikou,
+                  nebo jsme také k zastihnutí na akcích Univerzity Pardubice.
                 </p>
               </div>
             </div>
@@ -97,191 +92,58 @@
       <!-- Two -->
       <section id="two" class="spotlight style2 right">
         <span class="image fit main"
-          ><img src="images/pic03.jpg" alt=""
+          ><img src="images/derby24_01.jpg" alt=""
         /></span>
         <div class="content">
           <header>
-            <h2>Interdum amet non magna accumsan</h2>
-            <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+            <h2>Reprezentujeme Univerzitu Pardubice</h2>
+            <p>na národních a mezinárodních akademických ligách</p>
           </header>
           <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
+            Jakožto studentský spolek máme možnost reprezentovat
+            naší univerzitu v různých soutěžích a turnajích.
+            Při dobrém umístění jsou následně reprezentanti odměněni
+            sportovními stipendii.
           </p>
           <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li><a href="#pages/achievements/achievements.html" class="button">Naše úspěchy</a></li>
           </ul>
         </div>
-        <a href="#three" class="goto-next scrolly">Next</a>
       </section>
 
       <!-- Three -->
       <section id="three" class="spotlight style3 left">
         <span class="image fit main bottom"
-          ><img src="images/pic04.jpg" alt=""
+          ><img src="images/příliv24_01.jpg" alt=""
         /></span>
         <div class="content">
           <header>
-            <h2>Interdum felis blandit praesent sed augue</h2>
-            <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+            <h2>Nesedíme jenom za počitačema</h2>
+            <p>Zapojujeme se i do aktivit v rámci univerzity</p>
           </header>
           <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
+            Spolupracujeme s univerzitou a  dalšími studentskými spolky
+            na vytvoření záživného a přitažlivého prostředí pro zájemce
+            o studium na Univerzitě Pardubice.
           </p>
           <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
+            <li><a href="https://discord.gg/NmzvWFH" class="button" target="_blank">Přidejte se k nám!</a></li>
           </ul>
         </div>
-        <a href="#four" class="goto-next scrolly">Next</a>
       </section>
 
-      <!-- Four -->
-      <section id="four" class="wrapper style1 special fade-up">
-        <div class="container">
-          <header class="major">
-            <h2>Accumsan sed tempus adipiscing blandit</h2>
-            <p>
-              Iaculis ac volutpat vis non enim gravida nisi faucibus posuere
-              arcu consequat
-            </p>
-          </header>
-          <div class="box alt">
-            <div class="row gtr-uniform">
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-chart-area"></span>
-                <h3>Ipsum sed commodo</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-comment"></span>
-                <h3>Eleifend lorem ornare</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-flask"></span>
-                <h3>Cubilia cep lobortis</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-paper-plane"></span>
-                <h3>Non semper interdum</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-file"></span>
-                <h3>Odio laoreet accumsan</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-lock"></span>
-                <h3>Massa arcu accumsan</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-            </div>
-          </div>
-          <footer class="major">
-            <ul class="actions special">
-              <li><a href="#" class="button">Magna sed feugiat</a></li>
-            </ul>
-          </footer>
-        </div>
-      </section>
-
-      <!-- Five -->
-      <section id="five" class="wrapper style2 special fade">
-        <div class="container">
-          <header>
-            <h2>Magna faucibus lorem diam</h2>
-            <p>
-              Ante metus praesent faucibus ante integer id accumsan eleifend
-            </p>
-          </header>
-          <form method="post" action="#" class="cta">
-            <div class="row gtr-uniform gtr-50">
-              <div class="col-8 col-12-xsmall">
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  placeholder="Your Email Address"
-                />
-              </div>
-              <div class="col-4 col-12-xsmall">
-                <input type="submit" value="Get Started" class="fit primary" />
-              </div>
-            </div>
-          </form>
-        </div>
-      </section>
-
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a
-              href="https://www.facebook.com/UPCEesports"
-              class="icon brands alt fa-facebook-f"
-              target="_blank"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://discord.gg/NmzvWFH"
-              class="icon brands alt fa-discord"
-              target="_blank"
-              ><span class="label">Discord</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/upceesports"
-              class="icon brands alt fa-instagram"
-              target="_blank"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands alt fa-github" target="_blank"
-              ><span class="label">GitHub</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="mailto:upceesports@gmail.com"
-              class="icon solid alt fa-envelope"
-              ><span class="label">Email</span></a
-            >
-          </li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; Untitled. All rights reserved.</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </footer>
+			<!-- Footer -->
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span class="label">Discord</span></a></li>
+						<li><a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</footer>
     </div>
 
     <!-- Scripts -->
