--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -18,15 +18,17 @@
 
 			<!-- Header -->
 			<header id="header">
-			<h1 id="logo"><a href="../../index.html">UPCE Esports</a></h1>
-			<nav id="nav">
-				<ul>
-				<li><a href="../../index.html">Hlavní stránka</a></li>
-				<li><a href="../teams/teams.html">Týmy</a></li>
-				<li><a href="../wins/wins.html">Úspěchy</a></li>
-				<li><a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a></li>
-				</ul>
-			</nav>
+				<h1 id="logo"><a href="index.html">UPCE Esports</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Hlavní stránka</a></li>
+						<li><a href="pages/teams/teams.html">Týmy</a></li>
+						<li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
+						<li>
+							<a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
+						</li>
+					</ul>
+				</nav>
 			</header>
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
@@ -168,7 +170,6 @@
 						<li><a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
 						<li><a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span class="label">Discord</span></a></li>
 						<li><a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
