- fixed a issue where achievements page wasn´t linked with it's .css file

--- a/pages/achievements/achievements.html
+++ b/pages/achievements/achievements.html
@@ -13,7 +13,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="../../assets/css/main.css" />
-    <link rel="stylesheet" href="../wins/wins.css" />
+    <link rel="stylesheet" href="../achievements/achievements.css" />
 
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css" />
@@ -29,7 +29,7 @@
         <ul>
           <li><a href="../../index.html">Hlavní stránka</a></li>
           <li><a href="../teams/teams.html">Týmy</a></li>
-          <li><a href="../wins/wins.html">Úspěchy</a></li>
+          <li><a href="../achievements/achievements.html">Úspěchy</a></li>
           <li>
             <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
           </li>
