Update navigation links in achievements and teams pages for consistency

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
             <li><a href="pages/teams/teams.html">Týmy</a></li>
             <li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
             <li>
-              <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
+              <a
+                href="https://discord.gg/NmzvWFH"
+                class="button primary"
+                target="_blank"
+                >Připojte se k nám!</a
+              >
             </li>
           </ul>
         </nav>
@@ -62,8 +67,8 @@
                 <header>
                   <h2>Nejsme jen pro profíky.</h2>
                   <p>
-                    Do spolku zveme každého milovníka her,
-                    ať už od retro po nejnovější tituly.
+                    Do spolku zveme každého milovníka her, ať už od retro po
+                    nejnovější tituly.
                   </p>
                 </header>
               </div>
@@ -78,8 +83,8 @@
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Pravidelně pořádáme akce také i pro ostatní studenty,
-                  jako jsou například LAN párty, hospodské kvízy s herní tématikou,
+                  Pravidelně pořádáme akce také i pro ostatní studenty, jako
+                  jsou například LAN párty, hospodské kvízy s herní tématikou,
                   nebo jsme také k zastihnutí na akcích Univerzity Pardubice.
                 </p>
               </div>
@@ -100,13 +105,16 @@
             <p>na národních a mezinárodních akademických ligách</p>
           </header>
           <p>
-            Jakožto studentský spolek máme možnost reprezentovat
-            naší univerzitu v různých soutěžích a turnajích.
-            Při dobrém umístění jsou následně reprezentanti odměněni
-            sportovními stipendii.
+            Jakožto studentský spolek máme možnost reprezentovat naší univerzitu
+            v různých soutěžích a turnajích. Při dobrém umístění jsou následně
+            reprezentanti odměněni sportovními stipendii.
           </p>
           <ul class="actions">
-            <li><a href="#pages/achievements/achievements.html" class="button">Naše úspěchy</a></li>
+            <li>
+              <a href="#pages/achievements/achievements.html" class="button"
+                >Naše úspěchy</a
+              >
+            </li>
           </ul>
         </div>
       </section>
@@ -122,28 +130,63 @@
             <p>Zapojujeme se i do aktivit v rámci univerzity</p>
           </header>
           <p>
-            Spolupracujeme s univerzitou a  dalšími studentskými spolky
-            na vytvoření záživného a přitažlivého prostředí pro zájemce
-            o studium na Univerzitě Pardubice.
+            Spolupracujeme s univerzitou a dalšími studentskými spolky na
+            vytvoření záživného a přitažlivého prostředí pro zájemce o studium
+            na Univerzitě Pardubice.
           </p>
           <ul class="actions">
-            <li><a href="https://discord.gg/NmzvWFH" class="button" target="_blank">Přidejte se k nám!</a></li>
+            <li>
+              <a
+                href="https://discord.gg/NmzvWFH"
+                class="button"
+                target="_blank"
+                >Přidejte se k nám!</a
+              >
+            </li>
           </ul>
         </div>
       </section>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
-						<li><a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span class="label">Discord</span></a></li>
-						<li><a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
-						<li><a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; UPCE Esports. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+      <!-- Footer -->
+      <footer id="footer">
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.facebook.com/UPCEesports"
+              class="icon brands alt fa-facebook-f"
+              target="_blank"
+              ><span class="label">Facebook</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://discord.gg/NmzvWFH"
+              class="icon brands alt fa-discord"
+              target="_blank"
+              ><span class="label">Discord</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/upceesports"
+              class="icon brands alt fa-instagram"
+              target="_blank"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto:upceesports@gmail.com"
+              class="icon solid alt fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <ul class="copyright">
+          <li>&copy; UPCE Esports. All rights reserved.</li>
+          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+      </footer>
     </div>
 
     <!-- Scripts -->
