--- a/pages/achievements/achievements.html
+++ b/pages/achievements/achievements.html
@@ -13,167 +13,195 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="../../assets/css/main.css" />
-    <link rel="stylesheet" href="../wins/wins.css" />
+    <link rel="stylesheet" href="../achievements/achievements.css" />
 
-  <noscript>
-    <link rel="stylesheet" href="assets/css/noscript.css" />
-  </noscript>
-</head>
+    <noscript>
+      <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
+  </head>
 
-<body class="is-preload">
-  <div id="page-wrapper">
-    <!-- Header -->
-    <header id="header">
-      <h1 id="logo"><a href="../../index.html">UPCE Esports</a></h1>
-      <nav id="nav">
-        <ul>
-          <li><a href="../../index.html">Hlavní stránka</a></li>
-          <li><a href="../teams/teams.html">Týmy</a></li>
-          <li><a href="../wins/wins.html">Úspěchy</a></li>
-          <li>
-            <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <body class="is-preload">
+    <div id="page-wrapper">
+      <!-- Header -->
+      <header id="header">
+        <h1 id="logo"><a href="../../index.html">UPCE Esports</a></h1>
+        <nav id="nav">
+          <ul>
+            <li><a href="../../index.html">Hlavní stránka</a></li>
+            <li><a href="../teams/teams.html">Týmy</a></li>
+            <li><a href="../achievements/achievements.html">Úspěchy</a></li>
+            <li>
+              <a
+                href="https://discord.gg/NmzvWFH"
+                class="button primary"
+                target="_blank"
+                >Připojte se k nám!</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-
-    <!-- Cards 2025 / First-card -->
-    <div id="main" class="wrapper style1">
-      <div class="achievement-section">
-        <h2>2025</h2>
-        <div class="achievement-grid">
-          <div class="achievement-card">
-            <img src="../../images/cs2 stock.jpg" alt="SAVŠ x Smarty.cz Turnaj" />
-            <div class="tags">
-              <span class="tag gold">1. místo</span>
-              <span class="tag">ONLINE</span>
-              <a href="../teams/teams.html"><span class="tag yellow">CS2</span></a>
+      <!-- Cards 2025 / First-card -->
+      <div id="main" class="wrapper style1">
+        <div class="achievement-section">
+          <h2>2025</h2>
+          <div class="achievement-grid">
+            <div class="achievement-card">
+              <img
+                src="../../images/cs2 stock.jpg"
+                alt="SAVŠ x Smarty.cz Turnaj"
+              />
+              <div class="tags">
+                <span class="tag gold">1. místo</span>
+                <span class="tag">ONLINE</span>
+                <a href="../teams/teams.html"
+                  ><span class="tag yellow">CS2</span></a
+                >
+              </div>
+              <a
+                href="https://www.challengermode.com/s/SAVSwingman/tournaments/69eda8c4-4cfb-49fe-166d-08ddb231d456"
+                target="_blank"
+              >
+                <h3>SAVŠ x Smarty.cz Turnaj</h3>
+              </a>
+              <p class="achievement-desc">
+                Turnaj pod taktovkou SAVŠ, při účasti 12 týmů a hlavním
+                sponzorem Smarty.cz
+              </p>
             </div>
-            <a href="https://www.challengermode.com/s/SAVSwingman/tournaments/69eda8c4-4cfb-49fe-166d-08ddb231d456"
-              target="_blank">
-              <h3>SAVŠ x Smarty.cz Turnaj</h3>
-            </a>
-            <p class="achievement-desc">
-              Turnaj pod taktovkou SAVŠ, při účasti 12 týmů a hlavním
-              sponzorem Smarty.cz
-            </p>
+
+            <!-- Cards 2025 / Second-card -->
+
+            <div class="achievement-card">
+              <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
+              <div class="tags">
+                <span class="tag bronze">3RD PLACE</span>
+                <span class="tag">ONLINE</span>
+                <a href="../teams/teams.html"
+                  ><span class="tag yellow">CS2</span></a
+                >
+              </div>
+              <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
+                <h3>3E Akademické mistrovství</h3>
+              </a>
+              <p class="achievement-desc">
+                Týmy z celé České republiky složené ze studentů bojují za jméno
+                své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
+                o hodnotné ceny.
+              </p>
+            </div>
+
+            <!-- Cards 2025 / Third-card -->
+
+            <div class="achievement-card">
+              <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
+              <div class="tags">
+                <span class="tag green">ČTVRTFINALISTÉ</span>
+                <span class="tag">ONLINE</span>
+                <a href="../teams/teams.html"
+                  ><span class="tag purple">LoL</span></a
+                >
+              </div>
+              <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
+                <h3>3E Akademické mistrovství</h3>
+              </a>
+              <p class="achievement-desc">
+                Týmy z celé České republiky složené ze studentů bojují za jméno
+                své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
+                o hodnotné ceny.
+              </p>
+            </div>
+
+            <!-- Cards 2025 / Fourth-card -->
+
+            <div class="achievement-card">
+              <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
+              <div class="tags">
+                <span class="tag green">SEMIFINALISTÉ</span>
+                <span class="tag">ONLINE</span>
+                <a href="../teams/teams.html"
+                  ><span class="tag blue">RL</span></a
+                >
+              </div>
+              <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
+                <h3>3E Akademické mistrovství</h3>
+              </a>
+              <p class="achievement-desc">
+                Týmy z celé České republiky složené ze studentů bojují za jméno
+                své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
+                o hodnotné ceny.
+              </p>
+            </div>
+
+            <!-- Cards 2025 / Fifth-card -->
+
+            <div class="achievement-card">
+              <img src="../../images/derby25.jpg" alt="Derby s UHK" />
+              <div class="tags">
+                <span class="tag gold">VÍTĚZSTVÍ</span>
+                <span class="tag">LAN</span>
+                <a href="https://www.upce.cz"
+                  ><span class="tag upce">UPCE</span></a
+                >
+                <!--<span class="tag purple">LoL</span>-->
+              </div>
+              <h3>Derby s UHK</h3>
+              <p class="achievement-desc">
+                Každoroční derby se sousední Univerzitou Hradec Králové ve všech
+                třech reprezentačních titulech. Lokace dění se střídá každý rok,
+                v 2026 se na nás můžete přijít podívat do Auly Arnošta z
+                Pardubic.
+              </p>
+            </div>
+
+            <!-- Add more cards -->
           </div>
 
-          <!-- Cards 2025 / Second-card -->
-
-          <div class="achievement-card">
-            <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
-            <div class="tags">
-              <span class="tag bronze">3RD PLACE</span>
-              <span class="tag">ONLINE</span>
-              <a href="../teams/teams.html"><span class="tag yellow">CS2</span></a>
+          <h2>2024</h2>
+          <div class="achievement-grid">
+            <div class="achievement-card">
+              <img src="../../images/gsport2024.jpg" alt="2024 Event" />
+              <div class="tags">
+                <span class="tag bronze">ČTVRTFINALISTÉ</span>
+                <span class="tag">LAN</span>
+                <a href="../teams/teams.html"
+                  ><span class="tag yellow">CS2</span></a
+                >
+              </div>
+              <a href="https://e4sczech.cz" target="_blank"
+                ><h3>GSport 2024</h3></a
+              >
+              <p class="achievement-desc">
+                Světový unikát a revoluční koncept, který propojuje nejen gaming
+                a sport, ale také univerzity z celého světa.
+              </p>
             </div>
-            <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
-              <h3>3E Akademické mistrovství</h3>
-            </a>
-            <p class="achievement-desc">
-              Týmy z celé České republiky složené ze studentů bojují za jméno
-              své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
-              o hodnotné ceny.
-            </p>
-          </div>
-
-          <!-- Cards 2025 / Third-card -->
-
-          <div class="achievement-card">
-            <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
-            <div class="tags">
-              <span class="tag green">ČTVRTFINALISTÉ</span>
-              <span class="tag">ONLINE</span>
-              <a href="../teams/teams.html"><span class="tag purple">LoL</span></a>
+            <!-- Add more -->
+            <div class="achievement-card">
+              <img
+                src="../../images/3E.jpg"
+                alt="ESL Challenger League Season 49"
+              />
+              <div class="tags">
+                <span class="tag gold">1ST PLACE</span>
+                <span class="tag">ONLINE</span>
+                <a href="../teams/teams.html"
+                  ><span class="tag yellow">CS2</span></a
+                >
+              </div>
+              <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
+                <h3>3E Akademické mistrovství</h3>
+              </a>
+              <p class="achievement-desc">
+                Týmy z celé České republiky složené ze studentů bojují za jméno
+                své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
+                o hodnotné ceny.
+              </p>
             </div>
-            <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
-              <h3>3E Akademické mistrovství</h3>
-            </a>
-            <p class="achievement-desc">
-              Týmy z celé České republiky složené ze studentů bojují za jméno
-              své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
-              o hodnotné ceny.
-            </p>
-          </div>
-
-          <!-- Cards 2025 / Fourth-card -->
-
-          <div class="achievement-card">
-            <img src="../../images/3E.jpg" alt="3E Akademické mistrovství" />
-            <div class="tags">
-              <span class="tag green">SEMIFINALISTÉ</span>
-              <span class="tag">ONLINE</span>
-              <a href="../teams/teams.html"><span class="tag blue">RL</span></a>
-            </div>
-            <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
-              <h3>3E Akademické mistrovství</h3>
-            </a>
-            <p class="achievement-desc">
-              Týmy z celé České republiky složené ze studentů bojují za jméno
-              své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
-              o hodnotné ceny.
-            </p>
-          </div>
-
-          <!-- Cards 2025 / Fifth-card -->
-
-          <div class="achievement-card">
-            <img src="../../images/derby25.jpg" alt="Derby s UHK" />
-            <div class="tags">
-              <span class="tag gold">VÍTĚZSTVÍ</span>
-              <span class="tag">LAN</span>
-              <a href="https://www.upce.cz"><span class="tag upce">UPCE</span></a>
-              <!--<span class="tag purple">LoL</span>-->
-            </div>
-            <h3>Derby s UHK</h3>
-            <p class="achievement-desc">
-              Každoroční derby se sousední Univerzitou Hradec Králové ve všech
-              třech reprezentačních titulech. Lokace dění se střídá každý rok,
-              v 2026 se na nás můžete přijít podívat do Auly Arnošta z
-              Pardubic.
-            </p>
-          </div>
-
-          <!-- Add more cards -->
-        </div>
-
-        <h2>2024</h2>
-        <div class="achievement-grid">
-          <div class="achievement-card">
-            <img src="../../images/gsport2024.jpg" alt="2024 Event" />
-            <div class="tags">
-              <span class="tag bronze">ČTVRTFINALISTÉ</span>
-              <span class="tag">LAN</span>
-              <a href="../teams/teams.html"><span class="tag yellow">CS2</span></a>
-            </div>
-            <a href="https://e4sczech.cz" target="_blank"><h3>GSport 2024</h3></a>
-            <p class="achievement-desc">
-              Světový unikát a revoluční koncept, který propojuje nejen gaming
-              a sport, ale také univerzity z celého světa.
-            </p>
-          </div>
-          <!-- Add more -->
-          <div class="achievement-card">
-            <img src="../../images/3E.jpg" alt="ESL Challenger League Season 49" />
-            <div class="tags">
-              <span class="tag gold">1ST PLACE</span>
-              <span class="tag">ONLINE</span>
-              <a href="../teams/teams.html"><span class="tag yellow">CS2</span></a>
-            </div>
-            <a href="https://esportsa.cz/3e-mistrovstvi" target="_blank">
-              <h3>3E Akademické mistrovství</h3>
-            </a>
-            <p class="achievement-desc">
-              Týmy z celé České republiky složené ze studentů bojují za jméno
-              své univerzity v klání o prestižní titul vítězů 3Eligy, ale také
-              o hodnotné ceny.
-            </p>
           </div>
         </div>
       </div>
-    </div>
 
       <!-- Footer -->
       <footer id="footer">
