--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -18,12 +18,12 @@
 
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">UPCE Esports</a></h1>
+				<h1 id="logo"><a href="../../index.html">UPCE Esports</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Hlavní stránka</a></li>
-						<li><a href="pages/teams/teams.html">Týmy</a></li>
-						<li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
+						<li><a href="../../index.html">Hlavní stránka</a></li>
+						<li><a href="../teams/teams.html">Týmy</a></li>
+						<li><a href="../achievements/achievements.html">Úspěchy</a></li>
 						<li>
 							<a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
 						</li>
