- fixed page titles

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
             <li><a href="pages/teams/teams.html">Týmy</a></li>
             <li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
             <li>
-              <a
-                href="https://discord.gg/NmzvWFH"
-                class="button primary"
-                target="_blank"
-                >Připojte se k nám!</a
-              >
+              <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
             </li>
           </ul>
         </nav>
