--- a/pages/achievements/achievements.html
+++ b/pages/achievements/achievements.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Left Sidebar - Landed by HTML5 UP</title>
+    <title>UPCE Esports | Úspěchy</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
