Add responsive adjustments for player gallery and card overlays

--- a/pages/teams/teams.html
+++ b/pages/teams/teams.html
@@ -74,12 +74,14 @@
 							<div class="game-csko">
 							<img src="../../images/cs2.png" alt="Game Logo">
 							</div>
+							
 						<br>
 						<br>
 						<br>
 
 
 						<!-- LOLKO -->
+						<div class="container"></div>
 						<section class="player-gallery">
 						<div class="player-card">
 							<img src="../../images/hráč01.png" alt="Jindřich Chyba">
@@ -114,6 +116,7 @@
 							<div class="overlay">
 							<h3>Lukáš Šebek</h3>
 							<p>luky</p>
+						</div>
 						</div>
 						</div>
 						</section>
