Refactor HTML structure for improved layout and readability; update Discord widget and button styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
             <li><a href="pages/teams/teams.html">Týmy</a></li>
             <li><a href="pages/achievements/achievements.html">Úspěchy</a></li>
             <li>
-              <a href="https://discord.gg/NmzvWFH" class="button primary" target="_blank">Připojte se k nám!</a>
+              <a
+                href="https://discord.gg/NmzvWFH"
+                class="button primary"
+                target="_blank"
+                >Připojte se k nám!</a
+              >
             </li>
           </ul>
         </nav>
@@ -115,55 +120,86 @@
       </section>
 
       <!-- Three -->
-      <section id="three" class="spotlight style3 left">
-        <span class="image fit main bottom"
-          ><img src="images/příliv24_01.jpg" alt=""
-        /></span>
+      <section id="three" class="spotlight style3 wide-right">
+        <span class="image fit main bottom">
+          <img src="images/příliv24_01.jpg" alt="" />
+        </span>
         <div class="content">
-          <header>
-            <h2>Nesedíme jenom za počitačema</h2>
-            <p>Zapojujeme se i do aktivit v rámci univerzity</p>
-          </header>
-          <p>
-            Spolupracujeme s univerzitou a dalšími studentskými spolky na
-            vytvoření záživného a přitažlivého prostředí pro zájemce o studium
-            na Univerzitě Pardubice.
-          </p>
-          <ul class="actions">
-            <li>
-              <a
-                href="https://discord.gg/NmzvWFH"
-                class="button"
-                target="_blank"
-                >Přidejte se k nám!</a
-              >
-            </li>
-          </ul>
-          <div class="discord-widget">
-            <iframe src="https://discord.com/widget?id=555791981222035497&theme=dark" width="350" height="500"
-              allowtransparency="true" frameborder="0"
-              sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          <div class="row aln-top">
+            <!-- Left Column: Heading, Text, Button -->
+            <div class="col-7 col-12-medium">
+              <header>
+                <h2>Nesedíme jenom za počitačema</h2>
+                <p>Zapojujeme se i do aktivit v rámci univerzity</p>
+              </header>
+              <p>
+                Spolupracujeme s univerzitou a dalšími studentskými spolky na
+                vytvoření záživného a přitažlivého prostředí pro zájemce o
+                studium na Univerzitě Pardubice.
+              </p>
+              <ul class="actions">
+                <li>
+                  <a
+                    href="https://discord.gg/NmzvWFH"
+                    class="button"
+                    target="_blank"
+                  >
+                    Přidejte se k nám!
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- Right Column: Discord Widget -->
+            <div class="col-5 col-12-medium">
+              <div class="discord-widget">
+                <iframe
+                  src="https://discord.com/widget?id=555791981222035497&theme=dark"
+                  width="225"
+                  height="750"
+                  allowtransparency="true"
+                  frameborder="0"
+                  sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+                ></iframe>
+              </div>
+            </div>
           </div>
-          </div>
-          </section>
+        </div>
+      </section>
 
       <!-- Footer -->
       <footer id="footer">
         <ul class="icons">
           <li>
-            <a href="https://www.facebook.com/UPCEesports" class="icon brands alt fa-facebook-f" target="_blank"><span
-                class="label">Facebook</span></a>
+            <a
+              href="https://www.facebook.com/UPCEesports"
+              class="icon brands alt fa-facebook-f"
+              target="_blank"
+              ><span class="label">Facebook</span></a
+            >
           </li>
           <li>
-            <a href="https://discord.gg/NmzvWFH" class="icon brands alt fa-discord" target="_blank"><span
-                class="label">Discord</span></a>
+            <a
+              href="https://discord.gg/NmzvWFH"
+              class="icon brands alt fa-discord"
+              target="_blank"
+              ><span class="label">Discord</span></a
+            >
           </li>
           <li>
-            <a href="https://www.instagram.com/upceesports" class="icon brands alt fa-instagram" target="_blank"><span
-                class="label">Instagram</span></a>
+            <a
+              href="https://www.instagram.com/upceesports"
+              class="icon brands alt fa-instagram"
+              target="_blank"
+              ><span class="label">Instagram</span></a
+            >
           </li>
           <li>
-            <a href="mailto:upceesports@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a>
+            <a
+              href="mailto:upceesports@gmail.com"
+              class="icon solid alt fa-envelope"
+              ><span class="label">Email</span></a
+            >
           </li>
         </ul>
         <ul class="copyright">
@@ -171,7 +207,7 @@
           <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </footer>
-      </div>
+    </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
