Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section id="banner">
         <div class="content">
           <header>
-            <h2>Vítejte ve spolku UPCE Esports</h2>
+            <h2>Vítejte na stránce spolku UPCE Esports</h2>
             <p>
               Spojujeme hráče. Budujeme týmy. Soutěžíme naplno.<br />
               Přidej se a buď součástí univerzitní herní revoluce.
@@ -95,7 +95,7 @@
       </section>
 
       <!-- Two -->
-      <section id="two" class="spotlight style2 right">
+      <section id="two" class="spotlight style2 left">
         <span class="image fit main"
           ><img src="images/derby24_01.jpg" alt=""
         /></span>
@@ -139,11 +139,7 @@
               </p>
               <ul class="actions">
                 <li>
-                  <a
-                    href="https://discord.gg/NmzvWFH"
-                    class="button"
-                    target="_blank"
-                  >
+                  <a href="https://discord.gg/NmzvWFH" class="button" target="_blank">
                     Přidejte se k nám!
                   </a>
                 </li>
