--- a/pages/achievements/achievements.html
+++ b/pages/achievements/achievements.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="../../assets/css/main.css" />
     <link rel="stylesheet" href="../achievements/achievements.css" />
+    <link rel="icon" type="image/x-icon" href="../../images/favicon.ico" />
 
 
     <noscript>
